<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/latest_btm_item"
        android:icon="@drawable/ic_latest_news"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:title="@string/latest_news"
         />
    <item
        android:id="@+id/saved_btm_item"
        android:icon="@drawable/ic_saved"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:title="@string/saved_news"
         />
    <item
        android:id="@+id/older_btm_item"
        android:icon="@drawable/ic_older_news"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:title="@string/older_news"
         />
    <item
        android:id="@+id/search_btm_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:title="@string/search"
         />

</menu>